# moreutils

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
libs/demoer/: CMakeLists.txt
libs/demoer/include/: Demoer.hpp  Serialization.hpp
libs/demoer/proto/: event_log.capnp
libs/demoer/src/: Demoer.cpp  Serialization.cpp
libs/template/: CMakeLists.txt
libs/template/include/: lib.hpp
libs/template/src/: lib.cpp
services/: CMakeLists.txt
services/demoer/: CMakeLists.txt
services/demoer/src/: main.cpp
services/template/: CMakeLists.txt
services/template/src/: main.cpp
